[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/HUD/Shop/shop.gd" type="Script" id=1]
[ext_resource path="res://Assets/Themes/main.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Themes/panel_med.tres" type="StyleBox" id=3]
[ext_resource path="res://Assets/Themes/panel_green.tres" type="StyleBox" id=4]
[ext_resource path="res://Assets/Textures/UI/knot_sep.png" type="Texture" id=5]
[ext_resource path="res://Scenes/HUD/ItemDisplay/item_display.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Textures/UI/dialogue_arrow.png" type="Texture" id=7]
[ext_resource path="res://Scenes/HUD/Shop/collapse.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Menus/Main Menu/ui_generic_button.gd" type="Script" id=9]
[ext_resource path="res://Scenes/HUD/Shop/sellContainer.gd" type="Script" id=10]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="shop" type="Control"]
anchor_left = 0.1
anchor_top = 0.15
anchor_right = 0.6
anchor_bottom = 0.85
rect_pivot_offset = Vector2( -1156, -310 )
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel5" type="Panel" parent="."]
visible = false
anchor_left = 0.635
anchor_right = 1.0
anchor_bottom = 0.6
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
custom_styles/panel = ExtResource( 3 )

[node name="item_display" parent="Panel5" instance=ExtResource( 6 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0
expand = true
stretch_mode = 6

[node name="Panel2" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
custom_styles/panel = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="Panel2"]
visible = false
anchor_right = 1.0
anchor_bottom = 0.066
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0

[node name="label" type="Label" parent="Panel2/HBoxContainer"]
margin_right = 186.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "SHOP"

[node name="timer" type="Label" parent="Panel2/HBoxContainer"]
margin_left = 190.0
margin_right = 377.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "99:99:99"
align = 1

[node name="cash" type="Label" parent="Panel2/HBoxContainer"]
margin_left = 381.0
margin_right = 568.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "$000"
align = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel2"]
anchor_left = 0.9
anchor_right = 1.0
margin_left = -332.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = 46.0
alignment = 2

[node name="cash" type="Panel" parent="Panel2/HBoxContainer2"]
margin_left = 254.0
margin_right = 412.0
margin_bottom = 34.0
rect_min_size = Vector2( 158, 0 )
custom_styles/panel = ExtResource( 4 )

[node name="Label" type="RichTextLabel" parent="Panel2/HBoxContainer2/cash"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_right = -12.0
bbcode_enabled = true
bbcode_text = "[right]$ 000000000"
text = "$ 000000000"
scroll_active = false

[node name="MarginContainer2" type="MarginContainer" parent="Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 50.0
margin_bottom = -20.0

[node name="ScrollContainer" type="ScrollContainer" parent="Panel2/MarginContainer2"]
unique_name_in_owner = true
margin_right = 928.0
margin_bottom = 654.0
size_flags_horizontal = 3
scroll_horizontal_enabled = false

[node name="HBoxContainer" type="MarginContainer" parent="Panel2/MarginContainer2/ScrollContainer"]
unique_name_in_owner = true
margin_right = 928.0
size_flags_horizontal = 3
custom_constants/margin_right = 24
custom_constants/margin_left = 24

[node name="VBoxContainer" type="VBoxContainer" parent="Panel2/MarginContainer2/ScrollContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 24.0
margin_right = 904.0
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="Panel3" type="Panel" parent="."]
visible = false
anchor_left = 1.02
anchor_top = 0.65
anchor_right = 1.65
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="Panel3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
custom_styles/panel = ExtResource( 3 )

[node name="header" type="RichTextLabel" parent="Panel3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 24.0
margin_right = -24.0
margin_bottom = -24.0
custom_colors/default_color = Color( 1, 0.933333, 0.835294, 1 )
bbcode_enabled = true

[node name="body" type="RichTextLabel" parent="Panel3"]
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 46.0
margin_right = -24.0
margin_bottom = -24.0
custom_colors/default_color = Color( 1, 0.933333, 0.835294, 1 )
bbcode_enabled = true

[node name="Panel4" type="Panel" parent="."]
margin_left = -101.707
margin_top = -58.364
margin_right = 113.293
margin_bottom = 17.636
rect_rotation = -2.7
custom_styles/panel = ExtResource( 4 )

[node name="bplabel" type="Label" parent="Panel4"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 0.933333, 0.835294, 1 )
text = "shop"
align = 1
valign = 1

[node name="category_template" type="Control" parent="."]
visible = false
anchor_left = -3.504
anchor_right = -3.504
anchor_bottom = 0.062
margin_left = -732.16
margin_right = -732.16
margin_bottom = -0.176003

[node name="HSeparator" type="HSeparator" parent="category_template"]
margin_right = 41.0
margin_bottom = 16.0
custom_constants/separation = 16
custom_styles/separator = SubResource( 1 )

[node name="sep" type="TextureRect" parent="category_template"]
margin_top = 16.0
margin_right = 41.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
texture = ExtResource( 5 )
expand = true
stretch_mode = 4

[node name="sublabel" type="Label" parent="category_template"]
margin_top = 48.0
margin_right = 41.0
margin_bottom = 112.0
rect_min_size = Vector2( 0, 64 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 0.933333, 0.835294, 1 )
text = "bait"
valign = 1

[node name="GridContainer" type="GridContainer" parent="category_template"]
margin_top = 112.0
margin_bottom = 112.0
size_flags_horizontal = 0
custom_constants/vseparation = 38
custom_constants/hseparation = 15
columns = 8

[node name="sellContainer" type="GridContainer" parent="category_template"]
margin_top = 112.0
margin_bottom = 112.0
size_flags_horizontal = 0
custom_constants/vseparation = 38
custom_constants/hseparation = 15
columns = 8
script = ExtResource( 10 )

[node name="GridContainerSmall" type="GridContainer" parent="category_template"]
margin_top = 112.0
margin_bottom = 112.0
size_flags_horizontal = 2
custom_constants/vseparation = 38
custom_constants/hseparation = 24
columns = 3

[node name="questcont" type="VBoxContainer" parent="category_template"]
margin_top = 112.0
margin_right = 547.0
margin_bottom = 112.0
custom_constants/separation = 16

[node name="collapse" type="HBoxContainer" parent="category_template"]
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 3
script = ExtResource( 8 )

[node name="Label" type="Label" parent="category_template/collapse"]
margin_top = 3.0
margin_bottom = 37.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="category_template/collapse"]
margin_left = 4.0
margin_right = 79.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
text = "Expand"

[node name="Button" type="Button" parent="."]
anchor_left = 0.982292
anchor_top = -0.0198413
anchor_right = 1.01796
anchor_bottom = 0.0251587
margin_right = -0.240112
margin_bottom = -0.0200005
text = "x"
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="scroll_down" type="Label" parent="."]
anchor_top = 0.899445
anchor_right = 1.0
anchor_bottom = 0.944444
margin_left = 0.319946
margin_top = 0.0199585
text = "Scroll down for more!"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Panel2" type="Panel" parent="scroll_down"]
show_behind_parent = true
anchor_left = 0.35
anchor_right = 0.65
anchor_bottom = 1.0
margin_left = -4.0
margin_top = -4.0
margin_right = 4.0
margin_bottom = 4.0
custom_styles/panel = ExtResource( 4 )

[node name="Panel" type="Panel" parent="scroll_down"]
show_behind_parent = true
anchor_left = 0.35
anchor_right = 0.65
anchor_bottom = 1.0

[node name="scroll_up" type="Label" parent="."]
anchor_top = 0.09
anchor_right = 1.0
anchor_bottom = 0.128
margin_left = 0.319946
margin_top = 0.0199585
text = "Scroll up for more!"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Panel3" type="Panel" parent="scroll_up"]
show_behind_parent = true
anchor_left = 0.35
anchor_right = 0.65
anchor_bottom = 1.0
margin_left = -4.0
margin_top = -4.0
margin_right = 4.0
margin_bottom = 4.0
custom_styles/panel = ExtResource( 4 )

[node name="Panel" type="Panel" parent="scroll_up"]
show_behind_parent = true
anchor_left = 0.35
anchor_right = 0.65
anchor_bottom = 1.0

[node name="dialogue" type="Control" parent="."]
anchor_left = 1.05
anchor_top = 0.8
anchor_right = 1.7
anchor_bottom = 1.0
margin_right = -0.320004
margin_bottom = -0.0680008

[node name="Panel" type="Panel" parent="dialogue"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="RichTextLabel" type="RichTextLabel" parent="dialogue"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
custom_colors/default_color = Color( 0.415686, 0.266667, 0.12549, 1 )
bbcode_enabled = true

[node name="TextureRect" type="TextureRect" parent="dialogue"]
anchor_left = 0.05
anchor_top = -0.376
anchor_right = 0.152
anchor_bottom = 0.048
margin_left = -0.184006
margin_top = 0.0256538
margin_right = 0.200615
margin_bottom = -0.0543246
texture = ExtResource( 7 )

[node name="Timer" type="Timer" parent="dialogue"]
wait_time = 0.05
autostart = true

[connection signal="pressed" from="category_template/collapse/Button" to="category_template/collapse" method="_on_Button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="dialogue/Timer" to="." method="_dialogue_update"]
